# reggy

./: Cargo.toml  LICENSE  README.md  precommit.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/lalrpop_util/: all.html  enum.ParseError.html  index.html  macro.lalrpop_mod.html  struct.ErrorRecovery.html
docs/lalrpop_util/state_machine/: enum.SimulatedReduce.html  index.html  struct.Parser.html  trait.ParserAction.html  trait.ParserDefinition.html  type.ErrorRecovery.html  type.ParseError.html  type.ParseResult.html  type.SymbolTriple.html  type.TokenTriple.html
docs/regex_automata/: all.html  index.html
docs/regex_automata/dfa/: enum.StartError.html  enum.StartKind.html  index.html  struct.OverlappingState.html  trait.Automaton.html
docs/regex_automata/hybrid/: index.html
docs/regex_automata/nfa/: index.html
docs/reggy/: all.html  enum.Ast.html  enum.Error.html  enum.SearchStreamError.html  fn.parse.html  index.html  sidebar-items.js  struct.Match.html  struct.Pattern.html  struct.Search.html  struct.StreamSearch.html
docs/reggy/parser/: enum.Error.html  fn.parse.html
docs/reggy/search/: struct.Match.html  struct.Search.html
docs/search.desc/lalrpop_util/: lalrpop_util-desc-0-.js
docs/search.desc/reggy/: reggy-desc-0-.js
docs/src/aho_corasick/: ahocorasick.rs.html  automaton.rs.html  dfa.rs.html  lib.rs.html  macros.rs.html
src/: lib.rs
src/parser/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs  transpile.rs
src/search/: mod.rs  stream.rs
tests/: chunk_fuzz.rs  mod.rs  stream_file.rs
(+226 files in other folders)
