[package]
name = "reggy"
license = "MIT"
version = "0.0.3"
edition = "2021"
description = "friendly, incremental regular expressions for text analytics"
repository = "https://github.com/doc-sieve/reggy"
documentation = "https://doc-sieve.github.io/reggy/"

[dependencies]
lalrpop-util = "0.22.0"
regex-automata = "0.4.9"
regex-syntax = "0.8.5"
unicode-segmentation = "1.12.0"

[build-dependencies]
lalrpop = { version = "0.22.0", default-features = false }